tests/baselines/reference/jsFileCompilation_cjs_importMissingFileExtension_cjs_mjs.errors.txt
tests/cases/compiler/index.cjs(1,22): error TS2792: Cannot find module './blah'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
tests/cases/compiler/index.cjs(2,34): error TS2792: Cannot find module './utils'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?


==== tests/cases/compiler/index.cjs (2 errors) ====
    const Blah = require("./blah");
                         ~~~~~~~~
!!! error TS2792: Cannot find module './blah'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    const { util1, util2 } = require("./utils");
                                     ~~~~~~~~~
!!! error TS2792: Cannot find module './utils'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?
    
==== tests/cases/compiler/blah.mjs (0 errors) ====
    export default class Blah {}
    
==== tests/cases/compiler/utils.cjs (0 errors) ====
    function util1() {}
    function util2() {}
    module.exports = { util1, util2 };
    